test_suite/tests/ui/conflict/adjacent-tag.stderr
error: enum tags `conflict` for type and content conflict with each other
 --> tests/ui/conflict/adjacent-tag.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / #[serde(tag = "conflict", content = "conflict")]
5 | | enum E {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
